# group-project-be

./: .gitignore  Readme.rtf  category.py  database.py  index.py  main.py  onlineshop.sql  product.py  product_voucher.py  pyproject.toml  requirements.txt  transaction.py  transaction_voucher.py  user.py
app/: __init__.py  models.py  routes.py
app/models/: __init__.py  user.py
config/: config.py  database.py  setting.py
instance/: dev.db
middleware/: __init__.py  auth.py
models/: __init__.py  cart.py  notification.py  order.py  product.py  return_model.py  review.py  transaction.py  user.py  voucher.py
router/: auth.py  product.py  transaction.py  user.py
utils/: auth.py  database.py
