[project]
name = "group-project-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.0",
    "sqlalchemy>=2.0.40",
    "flask-sqlalchemy>=3.1.0",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.9",
    "flask-cors>=5.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "dotenv>=0.9.9",
]

[tool.dotenv]
path = ".env"
